
  install_miscellanea.make
  install_wx.make
  install_wxpdfdoc.make
Suppress voluminous and uninteresting 'unzip' output.

20160210T1837Z <gchicares@sbcglobal.net> [454]

  install_wx.make
Upgrade wx.

20160212T1246Z <gchicares@sbcglobal.net> [454]

  install_wx.make
Upgrade wx. See:
  http://lists.nongnu.org/archive/html/lmi/2016-02/msg00036.html

20160212T2018Z <gchicares@sbcglobal.net> [454]

  GNUmakefile
  Makefile.am
  como.make
  configure.ac
  install_mpatrol.make      [expunged]
  install_msw.sh
  mpatrol-mingw-GNUmakefile [expunged]
  mpatrol_1.4.8.patch       [expunged]
  mpatrol_patch_test.cpp    [expunged]
  msw_common.make
  objects.make
  workhorse.make
Abandon mpatrol.

20160212T2102Z <gchicares@sbcglobal.net> [454]

  configure.ac
  msw_msys.make [expunged]
  path_utility.cpp
  test_coding_rules.cpp
  workhorse.make
Abandon MSYS.

20160212T2223Z <gchicares@sbcglobal.net> [454]

  bcc_5_5_1.make
  main_wx.cpp
  test_coding_rules.cpp
  value_cast_test.cpp
Remove certain mpatrol vestiges.

20160227T2055Z <zeitlin> [454]

  Makefile.am
  configure.ac
Build DLLs, not static libraries, when cross-compiling.

20160227T2059Z <zeitlin> [454]

  configure.ac
  aclocal/ax_cxx_compile_stdcxx.m4 [new file]
Use C++11 dialect.

20160227T2104Z <zeitlin> [454]

  configure.ac
Always use AC_INCLUDES_DEFAULT() with AC_CHECK_HEADER().

 <gchicares@sbcglobal.net> [454]

20160227T2108Z <zeitlin> [454]

  configure.ac
Prefer AC_MSG_FAILURE() to the less helpful AC_MSG_ERROR().

20160227T2112Z <zeitlin> [454]

  Makefile.am
Remove unneeded dummy source file.

20160227T2116Z <zeitlin> [454]

  configure.ac
Disable boost nuisance warnings.

20160309T0040Z <gchicares@sbcglobal.net> [454]

  test_coding_rules.cpp
Allow a string rms discourages when GNU libtool requires it.

20160309T0113Z <gchicares@sbcglobal.net> [454]

  illustration_reg.xsl
  nasd.xsl
  reg_d_group.xsl
Fix defect introduced 20050720T1018Z: "substandard standard".
